[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Scenes/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Functions/RequestPlayerData.tscn" type="PackedScene" id=2]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerAmount" type="Label" parent="."]
margin_left = 21.9406
margin_top = 23.9405
margin_right = 133.941
margin_bottom = 46.9405
rect_scale = Vector2( 2, 2 )
text = "Current Players:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InviteCode" type="Label" parent="."]
margin_left = 673.337
margin_top = 18.3929
margin_right = 828.337
margin_bottom = 59.3929
rect_scale = Vector2( 2, 2 )
text = "Invite Code:
AAAA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNamesLabel" type="Label" parent="."]
margin_left = 39.0
margin_top = 81.8316
margin_right = 150.0
margin_bottom = 229.832
rect_scale = Vector2( 2, 2 )
text = "Kevin
Kevin
Kevin
Kevin
Kevin
Kevin
Kevin
Kevin"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestPlayerData" parent="." instance=ExtResource( 2 )]
[connection signal="worked" from="RequestPlayerData" to="." method="_on_RequestPlayerData_worked"]
